<resources>
    <string name="app_name" translatable="true">Palavra certa</string>
    <string name="fail_fetch_word">Falha em carregar nova palavra</string>
    <string name="how_to_play_title">Como jogar</string>
    <string name="how_to_play_1">Descubra a palavra certa em até 6 tentativas. Depois de cada tentativas as peças mostram o quão perto você está da solução.</string>
    <string name="how_to_play_2">A letra T faz parte da palavra e está na posição correta.</string>
    <string name="how_to_play_3">As letras S e O fazem parte da palavra mas em outra posição.</string>
    <string name="how_to_play_4">As letras L e A não fazem parte da palavra.</string>
    <string name="delete" translatable="false">Del</string>
    <string name="invalid_word">Opa, Certamente não colocamos essa palavra por aqui, tente novamente</string>
    <string name="missing_letters">número de letras insuficiente</string>
    <string name="right_word">Parabéns, você acertou a palavra</string>
    <string name="wrong_word">palavra incorreta, tente novamente</string>
    <string name="gameover">Você perdeu</string>
    <string name="version">Versão: %1$s</string>
    <string name="new_game_started">Tente adivinhar qual é a palavra</string>
    <string name="got_it">Entendi</string>
    <string name="the_word_is">A palavra era</string>
    <string name="wins">Vitórias: %1$s</string>
    <string name="loses">Derrotas: %1$s</string>
    <string name="dropouts">desistências: %1$s</string>
    <string name="solta_word" translatable="false">Palavra solta</string>
    <string name="close_help" translatable="false">Botão fechar ajudar</string>
    <string name="enter_button" translatable="false">Botão enter</string>
    <string name="help_button" translatable="false">Botão de ajuda</string>
    <string name="refresh_button" translatable="false">Botão atualizar palavra</string>
    <string name="wordguess_logo" translatable="false">Logo do jogo palavra certa</string>
</resources>